# gh-classroom-repos

./: .gitignore  LICENSE  README.md  classroom-repos.example.yml  pyproject.toml
.github/workflows/: ci.yml
src/classroom_repos/: __init__.py  cli.py  config.py  core.py  git.py  ops.py  pair_sync.py  starter.py
templates/: .gitattributes  .gitignore
templates/.github/workflows/: classroom.yml
tests/: test_cli.py  test_config.py  test_core.py  test_ops.py  test_pair_sync.py
